RESOLVED FIXED 264092
webgl/2.0.y/conformance2/transform_feedback/transform_feedback.html fails after CTS 2023-11-02 changes
https://bugs.webkit.org/show_bug.cgi?id=264092
Summary webgl/2.0.y/conformance2/transform_feedback/transform_feedback.html fails aft...
Kimmo Kinnunen
Reported 2023-11-02 08:17:11 PDT
webgl/2.0.y/conformance2/transform_feedback/transform_feedback.html fails after CTS 2023-11-02 changes
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-02 08:17:33 PDT
Kimmo Kinnunen
Comment 2 2023-11-03 02:42:43 PDT
EWS
Comment 3 2023-11-03 02:48:21 PDT
Committed 270165@main (7deb80b536b1): <https://commits.webkit.org/270165@main> Reviewed commits have been landed. Closing PR #19888 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.