Fix transform feedback for WebGL CTS 2023-11-02 https://bugs.webkit.org/show_bug.cgi?id=264092

Reviewed by Kimmo Kinnunen.

Fixed required buffer count for an empty
varyings array in interleaved mode.

Added validation to reject transform feedback buffer
binding updates when transform feedback is active.

* Source/WebCore/html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::transformFeedbackVaryings):
(WebCore::WebGL2RenderingContext::setIndexedBufferBinding):

Canonical link: https://commits.webkit.org/270165@main